Modified "posts in list" to no longer incorporate one big wrapping anchor. Now that I'm using the full description text, we need to accommodate links within that text.

--- a/src/sass/_general_typography.scss
+++ b/src/sass/_general_typography.scss
@@ -462,30 +462,29 @@ article {
     &:last-child {
         background: none;
     }
+    h3 {
+        @extend %h2;
+        color: $color-accent;
+    }
+    img {
+        display: block;
+        margin: $base-line-height+em 0;
+    }
+    .date {
+        @extend %date;
+    }
+
     a { 
         text-decoration: none;
-        h3 {
-            @extend %h2;
-            color: $color-accent;
-        }
+        
 /*        .entry-published {
             color: $color-main;
         }*/
-        img {
-            display: block;
-            margin: $base-line-height+em 0;
-        }
-        .date {
-            @extend %date;
-        }
-        .description {
-            //overflow: auto;
-        }
-        .description p {
-            color: $color-main;
-            margin-bottom: 0;
-        }
     } 
+    .description p {
+        color: $color-main;
+        margin-bottom: 0;
+    }
 }
 
 
